# 2024-Capstone

./: LICENSE  README.md
campus_pj/: CMakeLists.txt  package.xml
campus_pj/config /: calibrate_camera_pose.yaml  extrinsic.yaml  params.yaml  pc_get_camera_pose.yaml  test1.yaml  test2.yaml
campus_pj/include/campus_pj /: campus_pj.h  campus_pj.ui
campus_pj/launch /: campus_pj_demo.launch
campus_pj/nodes /: campus_pj_node.cpp  global_image_processing_node2.cpp
campus_pj/src /: campus_pj.cpp
pallet_gazebo/: CMakeLists.txt  package.xml  setup.py
pallet_gazebo/launch /: pallet_gazebo.launch
pallet_gazebo/src /: pallet_gazebo_node.py
pallet_gazebo/srv /: verticesnnames.srv
palletizing_msg/: CMakeLists.txt  package.xml
palletizing_msg/action /: dsr_movejoint.action  dsr_moveline.action
palletizing_msg/msg /: YoloResult.msg  YoloResultList.msg
palletizing_system/: CMakeLists.txt  package.xml  setup.py
palletizing_system/msg /: pick_plot.msg  servoing_plot.msg
palletizing_system/src/: Packing-service3.py  collision_detect.py  collision_detect_plot.py  half_sphere.py  p2planetest2.py  servoing.py
palletizing_system/src/py3dbp /: auxiliary_methods.py  constants.py  main.py
palletizing_system/srv /: box_info.srv  findPickposx.srv  lego_place.srv  map_results.srv  multi_viewing_pose.srv  obj_info.srv  re.srv  servoing.srv  servoing_posx.srv  vision_vertices.srv
palletizing_ui/: CMakeLists.txt  package.xml
palletizing_ui/config /: config.json
palletizing_ui/include/palletizing_ui /: RosWorker.h  palletizing_ui.h  palletizing_ui.ui
palletizing_ui/launch /: palletizing_ui_go.launch
palletizing_ui/logs /: ui_log_2024-11-22_13-55-35.txt  ui_log_2024-11-22_13-59-49.tx  ui_log_2024-11-22_14-03-16.txt  ui_log_2024-11-22_14-06-15.txt  ui_log_2024-11-22_14-09-03.txt  ui_log_2024-11-22_14-10-20.txt  ui_log_2024-11-22_14-15-16.txt  ui_log_2024-11-22_14-25-39.txt  ui_log_2024-11-22_14-32-30.txt  ui_log_2024-12-19_01-05-14_KST.txt
palletizing_ui/nodes /: palletizing_ui_node.cpp
palletizing_ui/rc/: resources.qrc
palletizing_ui/script /: dsr_control_node.cpp
palletizing_ui/src /: RosWorker.cpp  palletizing_ui.cpp
