<?xml version="1.0"?>
<package format="2">
  <name>palletizing_ui</name>
  <version>0.0.0</version>
  <description>The palletizing_ui package</description>

  <maintainer email="dnerhr9409@gmail.com">DW Lee</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>    
  <depend>std_msgs</depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
  <build_depend>palletizing_msgs</build_depend>
  <exec_depend>palletizing_msgs</exec_depend>

  <depend>qtbase5-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>message_generation</depend>
  <depend>rosconsole</depend>
  <depend>roscpp_serialization</depend>
  <depend>rostime</depend>
  
  <depend>palletizing_msg</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  
  <depend>yaml-cpp</depend>

  <!-- 메시지와 서비스 파일 의존성 추가 -->
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- 다른 도구에서 추가 정보를 요청할 수 있음 -->
  </export>
</package>
